--- a/Prac2/mur/Makefile
+++ b/Prac2/mur/Makefile
@@ -1,6 +1,7 @@
-run : mur1
-	./mur1 params.txt
-run_test : mur1
+run : mur2
+	./mur2 params.txt 50
+
+run_test : mur2
 	numactl --physcpubind=+1 ./mur1 params.txt
 
 mur0 : mur0.c winsuport.o winsuport.h
